# hamos

./: Cargo.toml  Makefile  Xargo.toml  memo.txt
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld
src/interrupts/: gdt.rs  mod.rs
src/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
