[package]
authors = ["hamadu <dercll1020@gmail.com>"]
name = "hamos"
version = "0.1.0"

[dependencies]
bitflags = "0.9.1"
multiboot2 = "0.1.0"
once = "0.3.3"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.2"
bit_field = "0.7.0"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[lib]
crate-type = ["staticlib"]
